@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Sep 29 22:11:54 CEST 2005
+// Fri Oct 28 16:44:52 CEST 2005
 //
 // (C) 2005 Jb Evain
 //
@@ -155,7 +155,7 @@ namespace Mono.Cecil.Binary {
 				break;
 			}
 
-			RVA importTable = new RVA (img.TextSection.VirtualAddress + m_mdWriter.ItStartPos);
+			RVA importTable = new RVA (img.TextSection.VirtualAddress + m_mdWriter.ImportTablePosition);
 
 			img.PEOptionalHeader.DataDirectories.ImportTable = new DataDirectory (importTable, 0x57);
 
@@ -312,7 +312,7 @@ namespace Mono.Cecil.Binary {
 
 		public override void VisitImportTable (ImportTable it)
 		{
-			m_textWriter.BaseStream.Position = m_mdWriter.ItStartPos;
+			m_textWriter.BaseStream.Position = m_mdWriter.ImportTablePosition;
 			m_textWriter.Write (it.ImportLookupTable.Value);
 			m_textWriter.Write (it.DateTimeStamp);
 			m_textWriter.Write (it.ForwardChain);
