@@ -73,11 +73,8 @@ namespace Mono.Cecil {
 		{
 			AssemblyTable asmTable = m_tableWriter.GetAssemblyTable ();
 
-			// TODO: public keys are not supported yet
-			if ((name.Flags & AssemblyFlags.PublicKey) > 0)
-				name.Flags &= ~AssemblyFlags.PublicKey;
-			if (name.PublicKey != null || name.PublicKey.Length > 0)
-				name.PublicKey = new byte [0];
+			if (name.PublicKey != null && name.PublicKey.Length > 0)
+				name.Flags |= AssemblyFlags.PublicKey;
 
 			AssemblyRow asmRow = m_rowWriter.CreateAssemblyRow (
 				name.HashAlgorithm,
